# comm2

./: CMakeLists.txt  Graph.cpp  Graph.h  clickablescene.cpp  clickablescene.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
